--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <h1>Daily Quotes by the World's Greatest Thinkers</h1>
-    <button id="button">Quote</button>
-    <div id="box" class="box">Click the button to generate a quote</div>
+    <div>
+        <div class="box">
+            <button id="button">Button</button>
+            <h2 id="quote">Quote</h2>
+            <h3 id="author">Author</h3>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
