--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Daily Quotes by the World's Greatest Thinkers</h1>
+    <h1>Inspirational Quotes</h1>
     <div>
         <div class="box">
             <button id="button">Button</button>
-            <h2 id="quote">Quote</h2>
-            <h3 id="author">Author</h3>
+            <h2 id="quote"></h2>
+            <h3 id="author"></h3>
         </div>
     </div>
     <script src="script.js"></script>
