--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Inspirational Quotes</h1>
-    <div>
+    <div class="container">
         <div class="box">
             <button id="button">Button</button>
             <h2 id="quote"></h2>
